--- a/ml/pratik/finalFunctions.ipynb
+++ b/ml/pratik/finalFunctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {
     "id": "wSvXscCti72W"
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {
     "id": "q-TDreEVmzzQ"
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {
     "id": "Np9ue-RtrNjQ"
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "b'\\x00\\x01\\xad\\x10\\x00\\x00\\xa0p=\\n\\xd7\\x0b\\\\\\xc08Z_\\xa8\\xec@B@\\xa0p=\\n\\xd7\\x0b\\\\\\xc08Z_\\xa8\\xec@B@|\\x01\\x00\\x00\\x00\\xa0p=\\n\\xd7\\x0b\\\\\\xc08Z_\\xa8\\xec@B@\\xfe'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "Name: 5020, dtype: object"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "(2, 38)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 33,
    "metadata": {
     "id": "brdojqp7iLez"
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 34,
    "metadata": {
     "id": "giux5mqyj9NI"
    },
@@ -347,7 +347,7 @@
     "  print('Deleting unnecessary features......\\n')\n",
     "  del_features = ['OBJECTID', 'FOD_ID', 'FPA_ID', 'NWCG_REPORTING_UNIT_ID', 'NWCG_REPORTING_UNIT_NAME', 'SOURCE_REPORTING_UNIT', 'SOURCE_REPORTING_UNIT_NAME', 'LOCAL_FIRE_REPORT_ID', 'LOCAL_INCIDENT_ID', 'FIRE_CODE', 'FIRE_NAME', 'ICS_209_INCIDENT_NUMBER' , 'ICS_209_NAME', 'MTBS_FIRE_NAME', 'MTBS_ID', 'COMPLEX_NAME', 'DISCOVERY_DATE', 'STAT_CAUSE_DESCR', 'CONT_DATE', 'CONT_TIME', 'FIRE_SIZE', 'OWNER_DESCR', 'COUNTY', 'FIPS_CODE', 'FIPS_NAME', 'Shape' ]\n",
     "  for i, item in enumerate(del_features):\n",
-    "    del data[item];\n",
+    "    del data[item]\n",
     "  print('Data shape is: ', data.shape, '\\n')\n",
     "\n",
     "  print('Encoding features......\\n')\n",
@@ -462,6 +462,8 @@
     "  print('EDA Completed...... \\n')\n",
     "  print('Predicting the fire size class......\\n')\n",
     "\n",
+    "  print(data)\n",
+    "\n",
     "  predictions = DataPrediction(data)\n",
     "  data['PREDICTED_CLASS'] = predictions\n",
     "  #Simplifying the predicted class by giving area covered in each class\n",
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -523,6 +525,17 @@
       "\n",
       "Predicting the fire size class......\n",
       "\n",
+      "      SOURCE_SYSTEM_TYPE  SOURCE_SYSTEM  NWCG_REPORTING_AGENCY  FIRE_YEAR  \\\n",
+      "5010                   0              0                      0       2005   \n",
+      "5020                   0              0                      0       2005   \n",
+      "\n",
+      "      STAT_CAUSE_CODE  LATITUDE  LONGITUDE  OWNER_CODE  STATE  \\\n",
+      "5010              1.0      36.5     -112.2         5.0      2   \n",
+      "5020              5.0      30.3      -84.4        13.0      9   \n",
+      "\n",
+      "      DISCOVERY_MONTH  DISCOVERY_TOD  STATE_PRCNT_FOREST  AVG_TEMP  AVG_PREC  \n",
+      "5010                8              3               25.64      61.1     11.80  \n",
+      "5020               11              3               50.68      70.8     54.33  \n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
       "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
@@ -879,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
